# KOGS409

./: pyproject.toml
ex1/: brands.sav  week_1.ipynb
exercises/: qwerty_data.csv  week_1.ipynb  week_2.ipynb  week_3.ipynb  week_4.ipynb
